# neuik

./: .gitignore  LICENSE.txt  README.md  build_linux.sh  build_osx.sh  meson.build  wscript
examples/: meson.build
examples/src/14-stack/: main-stack.c
examples/src/22-rotated/: main-rotated.c
examples/src/25-plot2d/: main-plot2d.c
examples/src/26-gridLayout/: main-gridLayout.c
include/: NEUIK.h  NEUIK_Callback.h  NEUIK_Canvas.h  NEUIK_Container.h  NEUIK_Element_internal.h  NEUIK_Event_internal.h  NEUIK_GridLayout.h  NEUIK_Plot.h  NEUIK_Plot2D.h  NEUIK_Plot2D_internal.h  NEUIK_PlotData.h  NEUIK_TextEdit.h  NEUIK_TextEdit_internal.h  NEUIK_TextEntry_internal.h  NEUIK_Window_internal.h  NEUIK_render.h  meson.build  neuik_MaskMap.h  neuik_TextBlock.h  neuik_classes.h
lib/: MenuConfig.c  NEUIK.h  NEUIK_Button.c  NEUIK_Callback.c  NEUIK_Callback.h  NEUIK_Canvas.c  NEUIK_CelGroup.c  NEUIK_ComboBox.c  NEUIK_ComboBoxConfig.c  NEUIK_Container.c  NEUIK_Container.h  NEUIK_Element.c  NEUIK_Element_internal.h  NEUIK_Event.c  NEUIK_Fill.c  NEUIK_FlowGroup.c  NEUIK_FontSet.c  NEUIK_FontSet.h  NEUIK_FontSet_darwin.c  NEUIK_FontSet_linux.c  NEUIK_Frame.c  NEUIK_GridLayout.c  NEUIK_GridLayout.h  NEUIK_HGroup.c  NEUIK_Image.c  NEUIK_Label.c  NEUIK_LabelConfig.c  NEUIK_Line.c  NEUIK_Line.h  NEUIK_ListGroup.c  NEUIK_ListRow.c  NEUIK_Plot.c  NEUIK_Plot.h  NEUIK_Plot2D.c  NEUIK_Plot2D.h  NEUIK_Plot2D_internal.h  NEUIK_PlotData.c  NEUIK_PlotData.h  NEUIK_ProgressBar.c  NEUIK_ProgressBarConfig.c  (+37 more)
scripts/: __init__.py  build_neuik_linux.py  build_neuik_osx.py  build_neuik_srcs.py  build_neuik_windows.py
src/: MainMenu.c  Menu.c  MenuItem.c  NEUIK.h  NEUIK_Button.c  NEUIK_ButtonConfig.c  NEUIK_ButtonConfig.h  NEUIK_ComboBox.c  NEUIK_ComboBoxConfig.c  NEUIK_ComboBoxConfig.h  NEUIK_Container.c  NEUIK_Container.h  NEUIK_Element.c  NEUIK_Element.h  NEUIK_Element_internal.h  NEUIK_Event.c  NEUIK_FlowGroup.c  NEUIK_FontSet.c  NEUIK_FontSet_linux.c  NEUIK_FontSet_windows.c  NEUIK_Frame.c  NEUIK_HGroup.c  NEUIK_Image.c  NEUIK_ImageConfig.c  NEUIK_Label.c  NEUIK_LabelConfig.c  NEUIK_Line.c  NEUIK_ListGroup.c  NEUIK_ListGroup.h  NEUIK_ListRow.c  NEUIK_ProgressBar.c  NEUIK_ProgressBar.h  NEUIK_ProgressBarConfig.c  NEUIK_Stack.c  NEUIK_StockImage.h  NEUIK_StockImage_internal.h  NEUIK_TextEdit.c  NEUIK_TextEdit.h  NEUIK_TextEditConfig.c  NEUIK_TextEditConfig.h  (+31 more)
