libneuik_headers = [
	'MainMenu.h',                'neuik_internal.h',
	'MainMenu_internal.h',       'NEUIK_LabelConfig.h',
	'MenuConfig.h',              'NEUIK_Label.h',
	'Menu.h',                    'NEUIK_Line.h',
	'Menu_internal.h',           'NEUIK_ListGroup.h',
	'MenuItem.h',                'NEUIK_ListRow.h',
	'MenuItem_internal.h',       'NEUIK_neuik.h',
	'NEUIK_ButtonConfig.h',      'NEUIK_platform.h',
	'NEUIK_Button.h',            'NEUIK_Plot2D.h',
	'NEUIK_Callback.h',          'NEUIK_Plot.h',
	'NEUIK_Canvas.h',            'NEUIK_ProgressBarConfig.h',
	'NEUIK_Canvas_internal.h',   'NEUIK_ProgressBar.h',
	'NEUIK_CelGroup.h',          'NEUIK_render.h',
	'neuik_classes.h',           'NEUIK_Stack.h',
	'NEUIK_colors.h',            'NEUIK_StockImage.h',
	'NEUIK_ComboBoxConfig.h',    'NEUIK_StockImage_internal.h',
	'NEUIK_ComboBox.h',          'NEUIK_structs_basic.h',
	'NEUIK_Container.h',         'neuik_TextBlock.h',
	'NEUIK_defs.h',              'NEUIK_TextEditConfig.h',
	'NEUIK_Element.h',           'NEUIK_TextEdit.h',
	'NEUIK_Element_internal.h',  'NEUIK_TextEdit_internal.h',
	'NEUIK_error.h',             'NEUIK_TextEntryConfig.h',
	'NEUIK_Event.h',             'NEUIK_TextEntry.h',
	'NEUIK_Event_internal.h',    'NEUIK_TextEntry_internal.h',
	'NEUIK_FlowGroup.h',         'NEUIK_ToggleButtonConfig.h',
	'NEUIK_FontSet.h',           'NEUIK_ToggleButton.h',
	'NEUIK_Frame.h',             'NEUIK_Transformer.h',
	'NEUIK.h',                   'NEUIK_VGroup.h',
	'NEUIK_HGroup.h',            'NEUIK_WindowConfig.h',
	'NEUIK_ImageConfig.h',       'NEUIK_Window.h',
	'NEUIK_Image.h',             'NEUIK_Window_internal.h',
]

install_headers(libneuik_headers, subdir : 'neuik')